== 2007-06-25

* 1 minor enhacement
  * spec loading fixed

== 0.1.0 / 2007-06-09

* 1 major enhancement
  * Initial release with 100% coverage.